tests/NormalTests/paczka1/fuzzy1/38228617.err
Error in line 3: 5JM6kNriXPq A11 5,0
Error in line 4: krzcYmB8 S706 75,2
Error in line 10: UHG S854 94,6
Error in line 13: o7UJEjYjpZZ S8e4 111,e
Error in line 9: nRpXhl A11 7,0
Error in line 24: nRpXhl S3 70,6
Error in line 28: krzcYmB8 S706 36,0
